(css) Fix Grid child columns not working when no gap prop on Grid parent

--- a/packages/pallote-css/src/styles/components/_card.scss
+++ b/packages/pallote-css/src/styles/components/_card.scss
@@ -137,6 +137,7 @@
   > .card_header > .card_icon {
     width: $size;
     height: $size;
+    margin-bottom: calc($size/2);
   }
 
   > .card_media,
